name:                ulid
version:             0.2.0.0
synopsis:            Implementation of ULID, lexicographically sortable unique identifiers
description:         Implementation of alizain's ULID identifier. Canonically encoded as a 26 character string, as opposed to the 36 character UUID. 
                     Uses Crockford's base32 for better efficiency and readability (5 bits per character)
homepage:            https://github.com/steven777400/ulid
license:             BSD3
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          steve@kolls.net
copyright:           2017 Steve Kollmansberger
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ULID
                    ,  Data.ULID.Crockford
                    ,  Data.ULID.Random
                    ,  Data.ULID.TimeStamp
  other-modules:       Data.Binary.Roll                  
  build-depends:       base >= 4.7 && < 5
                    ,  crockford
                    ,  time
                    ,  crypto-api
                    ,  random
                    ,  bytestring
                    ,  binary
                    ,  deepseq
                    ,  hashable
  default-language:    Haskell2010

executable ulid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ulid
                     , crypto-api                     
  default-language:    Haskell2010

test-suite ulid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , ulid
                     , bytestring
                     , binary
                     , random
                     , hashable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark ulid-bench
    type:                exitcode-stdio-1.0
    hs-source-dirs:      bench
    main-is:             Main.hs
    build-depends:       base
                      ,  ulid                     
                      ,  time
                      ,  text
                      ,  format-numbers
                      ,  deepseq

source-repository head
  type:     git
  location: https://github.com/steven777400/ulid.git
