name:                ulid
version:             0.3.2.0
synopsis:            Implementation of ULID - Universally Unique
                     Lexicographically Sortable Identifier
description:         Implementation of Alizain Feerasta's ULID specification.
                     A 26 character string identifier,
                     as opposed to the 36 character UUID string.
                     Uses Douglas Crockford's base 32 encoding
                     for better efficiency and readability
                     (5 bits per character).
homepage:            https://github.com/ad-si/ulid
license:             BSD3
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          ulid@ad-si.com
copyright:           2017 Steve Kollmansberger
category:            Data, Codec, Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Data.ULID
                    ,  Data.ULID.Base32
                    ,  Data.ULID.Digits
                    ,  Data.ULID.Random
                    ,  Data.ULID.TimeStamp
  other-modules:       Data.Binary.Roll
  build-depends:       base >= 4.7 && < 5
                    ,  binary
                    ,  bytestring
                    ,  crypto-api
                    ,  deepseq
                    ,  hashable
                    ,  random
                    ,  text
                    ,  time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


executable ulid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ulid
                     , crypto-api
  default-language:    Haskell2010


test-suite ulid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.ULID.Base32Spec
                     , Data.ULID.RandomSpec
                     , Data.ULID.TimeStampSpec
                     , Data.ULIDSpec
  build-depends:       base
                     , hspec
                     , ulid
                     , bytestring
                     , binary
                     , random
                     , hashable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


benchmark ulid-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                    ,  ulid
                    ,  time
                    ,  text
                    ,  format-numbers
                    ,  deepseq
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


source-repository head
  type:     git
  location: https://github.com/ad-si/ulid.git
